--- a/Front/package.json
+++ b/Front/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "@lottiefiles/react-lottie-player": "^3.5.3",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
